[gd_scene load_steps=3 format=3 uid="uid://cs36x6rbbkhyq"]

[ext_resource type="Theme" uid="uid://bsqvhddgwm0i7" path="res://theme.tres" id="1_78k5h"]
[ext_resource type="Script" path="res://ui.gd" id="1_dksdn"]

[node name="Ui" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 330.0
theme = ExtResource("1_78k5h")
script = ExtResource("1_dksdn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="GridSizeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Grid Size: "

[node name="GridSizeSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="ShowGridButton" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Show Grid"

[node name="ResetButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ViewTypeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "View Type"

[node name="ViewTypeButton" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Third Person"
popup/item_0/id = 1
popup/item_1/text = "First Person"
popup/item_1/id = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ServerAddressLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Server Address"

[node name="ServerAddressEdit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ServerPortLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Server Port"

[node name="ServerPortEdit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
